--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,16 +12,22 @@
         android:layout_height="match_parent"/>
     <TextView
         android:layout_width="match_parent"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         android:layout_height="wrap_content"
-        android:text="aaaaaaaaa"
+        android:text="@string/splash_1"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="100dp"
+        android:gravity="center"
         />
 
     <Button
         android:id="@+id/btn_enter"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="56dp"
+        android:layout_marginBottom="5dp"
         android:text="进入"/>
 </RelativeLayout>
